<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.infocrypt.infocrypt.MainActivity">

    <TextView android:id="@+id/main_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:paddingTop="150dp"
        android:hint="@string/what_do" />

    <Button
        android:id="@+id/newButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_new"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="startNew"/>

    <Button
        android:id="@+id/openButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newButton"
        android:onClick="openFile"
        android:layout_centerHorizontal="true"
        android:text="@string/button_open" />

</RelativeLayout>
